# conda-deny

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  deny.toml  rerender_vhs.sh
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/assets/demo/: demo-dark.tape  demo-light.tape  rerender_vhs.sh
.github/workflows/: build.yml  ci.yml  coverage.yml
src/: bundle.rs  check.rs  cli.rs  conda_deny_config.rs  conda_meta_entry.rs  conda_meta_package.rs  expression_utils.rs  lib.rs  license_allowlist.rs  license_info.rs  license_whitelist.rs  list.rs  main.rs  pixi_lock.rs  prefix.rs  read_remote.rs
supply-chain/: config.toml
tests/: default_license_allowlist.toml  integration_tests.rs
tests/pixi-build/: pixi.toml
tests/pixi-build/local-pkg/: pixi.toml
tests/snapshots/: integration_tests__bundle_lockfile.snap  integration_tests__bundle_prefix.snap  integration_tests__check.snap  integration_tests__check_test_default_use_case.snap  integration_tests__check_test_default_use_case_pyproject.snap  integration_tests__exception_check.snap  integration_tests__list.snap  integration_tests__list_test_default_use_case.snap  integration_tests__list_test_default_use_case_pyproject.snap  integration_tests__local_allowlist_check.snap  integration_tests__multiple_allowlists_check.snap  integration_tests__osi_check.snap  integration_tests__pixi_build_list.snap  integration_tests__platform_env_restrictions_check.snap  integration_tests__prefix_list.snap  integration_tests__pypi_ignore_check.snap  integration_tests__remote_allowlist_check.snap  integration_tests__safe_licenses_in_config_check.snap
tests/test_bundle_data/_libgcc_mutex-0.1-free/info/: about.json
tests/test_bundle_data/polarify-0.2.0-pyhd8ed1ab_0.conda/: pkg-polarify-0.2.0-pyhd8ed1ab_0.tar.zst
tests/test_bundle_data/polarify-0.2.0-pyhd8ed1ab_0.conda/info/: about.json  files  index.json
tests/test_bundle_utils/polarify-0.2.0-pyhd8ed1ab_0.conda/: info-polarify-0.2.0-pyhd8ed1ab_0.tar.zst
tests/test_bundle_utils/polarify-0.2.0-pyhd8ed1ab_0.conda/info/: paths.json
tests/test_conda_lock_files/: distinct_archs.yml  distinct_archs_empty.yml  invalid_lock.yml  valid_lock.yml
tests/test_conda_metas/invalid_json/conda-meta/: invalid.json
tests/test_conda_metas/non-json-in-conda-meta/: xz-5.2.6-h57fd34a_0.json
tests/test_conda_prefixes/test-env/conda-meta/: asttokens-2.4.1-pyhd8ed1ab_0.json  bzip2-1.0.8-h99b78c6_7.json  ca-certificates-2024.8.30-hf0a4a13_0.json  decorator-5.1.1-pyhd8ed1ab_0.json  exceptiongroup-1.2.2-pyhd8ed1ab_0.json  executing-2.1.0-pyhd8ed1ab_0.json  history  ipython-8.28.0-pyh707e725_0.json  jedi-0.19.1-pyhd8ed1ab_0.json  libblas-3.9.0-24_osxarm64_openblas.json  libcblas-3.9.0-24_osxarm64_openblas.json  libcxx-19.1.2-ha82da77_0.json  (+38 more)
tests/test_config_setups/: empty_license_whitelist.toml  env_names.toml  invalid.toml  test_config_for_license_infos.toml  valid_config_single_url.toml
tests/test_config_setups/test_exclude_environment/: error_exclude_environment.toml  exclude_environment.toml  multiple_exclude_environment.toml  pixi.toml
tests/test_default_use_case/: pixi.toml
tests/test_default_use_case_pyproject/: pyproject.toml
tests/test_end_to_end/test_default_use_case/: license_whitelist.toml
tests/test_end_to_end/test_default_use_case_pyproject/: license_whitelist.toml  pyproject.toml
tests/test_end_to_end/test_exception_use_case/: config_with_exception.toml  config_without_exception.toml  pixi.toml  whitelist_with_exception.toml  whitelist_without_exception.toml
tests/test_end_to_end/test_multiple_whitelists/: pixi.toml
tests/test_end_to_end/test_platform_env_spec/: pixi.toml
tests/test_end_to_end/test_prefix_list/: pixi.toml
tests/test_end_to_end/test_pypi_packages/: pixi.toml
tests/test_end_to_end/test_remote_whitelist/: pixi.toml
tests/test_end_to_end/test_safe_licenses_in_config/: license_whitelist.toml  pixi.toml
tests/test_exception_use_case/: allowlist_with_exception.toml  config_with_exception.toml  config_without_exception.toml
tests/test_ignored_source_package/: pixi.toml  pixi_ignore.toml  pixi_ignore_source.toml  pixi_ignore_version.toml
tests/test_lockfile_pattern/: license_allowlist.toml  license_whitelist.toml  pixi.toml
tests/test_lockfile_pattern/subdir/: pixi.toml
tests/test_multiple_whitelists/: license_whitelist.toml  pixi.toml
tests/test_platform_env_spec/: license_whitelist.toml  pixi.toml
tests/test_prefix_list/: pixi.toml
tests/test_pypi_ignore/: pixi.toml
tests/test_pypi_packages/: pixi.toml
tests/test_pyproject_toml_files/: invalid_url.toml  valid_config_multiple_urls.toml
tests/test_remote_base_configs/: conda-deny-license_whitelist.toml  empty_config.toml  invalid_config.toml  valid_config.toml  valid_license_whitelist.toml  version_test_config.toml
tests/test_remote_whitelist/: pixi.toml
tests/test_source_package_with_record/: pixi.toml
(+5 files in other folders)
