[package]
name = "conda-deny"
description = "A CLI tool to check your project's dependencies for license compliance."
version = "0.4.1"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = [
    "reqwest/native-tls",
    "reqwest/native-tls-alpn",
]
rustls-tls = [
    "reqwest/rustls-tls",
    "reqwest/rustls-tls-native-roots",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "blocking", "stream"] }
serde_yaml = "0.9.34"
regex = "1.11.1"
spdx = "0.10.8"
colored = "3.0.0"
async-trait = "0.1.88"
rattler_conda_types = "0.31.6"
rattler_lock = "0.22.34"
anyhow = "1.0.97"
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
log = "0.4.27"
tempfile = "3.19.1"
csv = "1.3.1"
rattler_package_streaming = "0.22.35"
tar = "0.4.44"
indicatif = "0.17.11"
rayon = "1.10.0"
rattler_networking = "0.22.11"
reqwest-middleware = "0.4.1"
tokio-util = "0.7.14"
futures-util = "0.3.31"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"
serial_test = "3.2.0"
rstest = "0.25.0"
