[package]
name = "conda-deny"
description = "A CLI tool to check your project's dependencies for license compliance."
version = "0.5.4"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = [
  "reqwest/native-tls",
  "reqwest/native-tls-alpn",
  "rattler_networking/native-tls",
  "rattler_package_streaming/native-tls",
]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots",
  "rattler_networking/rustls-tls",
  "reqwest-middleware/rustls-tls",
  "rattler_package_streaming/rustls-tls",
]

# See https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.18", default-features = false, features = [
  "http2",
  "blocking",
  "stream",
] }
serde_yaml = "0.9.34"
regex = "1.11.1"
spdx = "0.10.8"
colored = "3.0.0"
async-trait = "0.1.88"
rattler_conda_types = "0.33.0"
rattler_lock = "0.23.3"
anyhow = "1.0.98"
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.6"
log = "0.4.27"
csv = "1.3.1"
rattler_package_streaming = { version = "0.22.37", default-features = false }
indicatif = "0.17.11"
rayon = "1.10.0"
rattler_networking = { version = "0.23.0", default-features = false }
reqwest-middleware = { version = "0.4.1", default-features = false }
tar = "0.4.44"
futures = "0.3.31"
glob = "0.3.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
serial_test = "3.2.0"
rstest = "0.25.0"
tempfile = "3.20.0"
walkdir = "2.5.0"
strip-ansi-escapes = "0.2.1"
